--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,6 @@
 	<property file="build.properties" />
 
 	<target name="package" description="Package">
-		<zip destfile="dist/memoryrestart-${version}-fx.xpi" basedir="." excludes="dist/*" />
+		<zip destfile="dist/memoryrestart-${version}-fx.xpi" basedir="." excludes="**/dist/**,.project,build.*,pad.xml,screenshot.gif" />
 	</target>
 </project>
